--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
+    <title>CV Template</title>
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600i,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Port+Lligat+Sans" rel="stylesheet">
